projects/compiler/test/parser/lambdas_error_noargs_no_arrow.out
Error at %FILE_NAME%:1:4
Unexpected token 'int', expected '=>':
  |  () 123
        ^